add gallery page

--- a/pages/float-both.html
+++ b/pages/float-both.html
@@ -20,6 +20,7 @@
             <li><a href="./float-left.html">Furappuccino</a></li>
             <li><a href="./float-right.html">Coffee</a></li>
             <li><a href="#">Tea</a></li>
+            <li><a href="./flexbox-gallery.html">Countries</a></li>
         </ul>
     </nav>
 
@@ -83,6 +84,7 @@
             <li><a href="#">To the Top</a></li>
             <li><a href="./float-left.html">Furappuccino</a></li>
             <li><a href="./float-right.html">Coffee</a></li>
+            <li><a href="./flexbox-gallery.html">Countries</a></li>
         </ul>
     </footer>
 </body>
