--- a/pages/float-right.html
+++ b/pages/float-right.html
@@ -19,6 +19,7 @@
             <li><a href="./float-left.html">Furappuccino</a></li>
             <li><a href="#">Coffee</a></li>
             <li><a href="./float-both.html">Tea</a></li>
+            <li><a href="./flexbox-gallery.html">Countries</a></li>
         </ul>
     </nav>
 
@@ -76,6 +77,7 @@
             <li><a href="#">To the Top</a></li>
             <li><a href="../index.html">Furappuccino</a></li>
             <li><a href="./float-both.html">Tea</a></li>
+            <li><a href="./flexbox-gallery.html">Countries</a></li>
         </ul>
     </footer>
 </body>
